--- a/src/content/writing/building-side-projects.mdx
+++ b/src/content/writing/building-side-projects.mdx
@@ -7,49 +7,27 @@ pubDate: 'Sept 1 2024'
 ## Building side projects changed my life. here's how:
 
 I'm a builder. Always have been. Started at 18. Self-taught dev. Learn by doing.
-
 First, iOS. No iPhone though. Switched to Android.
-
 Found [MIT App Inventor](https://appinventor.mit.edu). Drag-and-drop stuff. Got bored. Moved to Android Studio.
-
 No mentor. Skipped class. Stayed late. 21km commute home.
-
 Loved every minute.
-
 Watched tutorials. Tried new things. Tweaked code. Made it work.
-
 Got good at coding. Design sucked though. So I learned that too.
-
 Already knew art. Painting, sketching. Helped a bit.
-
 Copied Dribbble designs. Daily practice. Got decent after a few months.
-
 Joined open source. Learned tons from bright minds.
-
-Started YouTube. Reduced my inferiority complex. Made mistakes. Got traction.
-
+Started YouTube. Reduced my inferiority complex. Made mistakes. Got traction
 Founded a [dev community](https://github.com/TheCodeMonks). Learned from others experiences.
-
-Got design jobs. Improved products from scratch.
-
-Worked at companies. Gained experience. Got bored. Quit.
-
+Got design jobs. Improved products from scratch
+Worked at companies. Gained experience. Got bored. Quit
 Started my own [ThisUX – Design Led Product studio](https://thisux.com). Tough at first. Got better.
-
 Became full-stack. Tried all frameworks. Fell in love with [Svelte/Kit](svelte.dev).
-
 Built client products. Made my own too. Always top-notch design.
-
 Still build side projects. For fun. Keeps me curious.
-
 It's not wasting time. It's connecting dots.
-
 You become what you consume. I believe that.
-
 Building keeps me proactive. Gets things done.
-
 Won't stop. Build. Share. Do it forever.
-
 That's the power of building. It's not just about the product. It's about you.
 
 ## Few things I've learned:
