Cambios en tipografía

--- a/src/content/writing/building-side-projects.mdx
+++ b/src/content/writing/building-side-projects.mdx
@@ -1,68 +1,21 @@
 ---
-title: "Building Side Projects"
-description: "My secret weapon for growth and innovation. More than just hobbies, they're my playground for learning and staying ahead"
-pubDate: 'Sept 1 2024'
+title: "Me gusta mi coche"
+description: "Tener un coche muchas veces es una ventaja."
+pubDate: '2025.02.28'
 ---
 
-## Building side projects changed my life. here's how:
+## Me gusta mi coche
 
-I'm a builder. Always have been. Started at 18. Self-taught dev. Learn by doing.
-First, iOS. No iPhone though. Switched to Android.
-Found [MIT App Inventor](https://appinventor.mit.edu). Drag-and-drop stuff. Got bored. Moved to Android Studio.
-No mentor. Skipped class. Stayed late. 21km commute home.
-Loved every minute.
-Watched tutorials. Tried new things. Tweaked code. Made it work.
-Got good at coding. Design sucked though. So I learned that too.
-Already knew art. Painting, sketching. Helped a bit.
-Copied Dribbble designs. Daily practice. Got decent after a few months.
-Joined open source. Learned tons from bright minds.
-Started YouTube. Reduced my inferiority complex. Made mistakes. Got traction
-Founded a [dev community](https://github.com/TheCodeMonks). Learned from others experiences.
-Got design jobs. Improved products from scratch
-Worked at companies. Gained experience. Got bored. Quit
-Started my own [ThisUX – Design Led Product studio](https://thisux.com). Tough at first. Got better.
-Became full-stack. Tried all frameworks. Fell in love with [Svelte/Kit](svelte.dev).
-Built client products. Made my own too. Always top-notch design.
-Still build side projects. For fun. Keeps me curious.
-It's not wasting time. It's connecting dots.
-You become what you consume. I believe that.
-Building keeps me proactive. Gets things done.
-Won't stop. Build. Share. Do it forever.
-That's the power of building. It's not just about the product. It's about you.
+Mi coche es un Peugeot 107 Trendy y me gusta.
+La primera matriculación se hizo en octubre 2010 por lo que tiene ya 14 años. Es mi primer coche de verdad (el primero puesto a mi nombre). El motor es fabricado por Toyota y es del tipo [G-1KR](https://en.wikipedia.org/wiki/Toyota_KR_engine), con 998 cm cúbicos y una potencia máxima de 68 CV. Es del llamado [Segmento A](https://es.wikipedia.org/wiki/Segmento_A) aunque en Japón sería considerado un [軽自動車, keijidōsha](https://es.wikipedia.org/wiki/Kei_car), un segmento fiscal que se da allí desde la Segunda Guerra Mundial. Es una carrocería de tipo _Hatchback_.
 
-## Few things I've learned:
+Mi padre lo compró cerca del 2011 o 2012 para que me mi madre fuera y viniera al trabajo. Tenía muy pocos kilómetros y mi madre, al solo tomarlo para un recorrido diario de no más de 5 minutos no le hizo mucho. Al jubilarse ella en 2016 ya no lo necesitaba por lo que me lo dieron a mi. Lo estuve usando a su nombre desde las navidades de 2016 hasta el año 2023 cuando mi padre decidió pasármelo (lo cual me vino bien porque coincidió a cuando nos mudamos y lo necesitaba a mi nombre para poder aparcar en la calle).
 
-- **Ok to failure.** First hackathon? Dead last. Next one? First place.
-- **Collaborate.** Solo for years. Joined a team. Mind-blowing growth.
-- **Document everything.** Future you will thank you. Trust me.
-- **Sleep on it.** Stuck on a bug for hours. Slept. Solved it at breakfast.
-- **Take breaks.** Coded 16 hours straight. Burned out. Now? Regular walks. Better code.
-- **Read the docs.** Struggled with an API. RTFM saved days of work.
-- **Give back.** Answered StackOverflow questions. Learned more than I taught.
-- **Version control.** Lost a week's work once. Now? [Git](https://github.com/Spikeysanju) is my best friend.
-- **Accessibility matters.** Made apps for everyone. Opened new markets.
-- **Design with care.** First app? Ugly as hell. Now? Pixel-perfect every time.
-- **Build Templates.** Repeated code? Made a template. Saved hours.
-- **Invest in tools.** Bought a Mac. Design improved. Bought a new monitor. Productivity doubled. Bought a new chair. Back pain gone. Invest in yourself.
-- **Follow peers.** Twitter, GitHub, Reddit. Found new tools, new ideas, new friends.
-- **Ignore community drama.** Wasted time on Twitter fights. Now? Mute, block, move on.
-- **Say no.** Overcommitted once. Burned out. Now? Prioritize. Focus on what matters.
-- **Watch people closely.** Learned from the best. Copied their habits. Got better.
-- **Imitate, then innovate.** Copied designs. Learned the why. Made my own. Better than before.
-- **Ego is the enemy.** Thought I was the best. Got humbled. Now? Stay humble. Keep learning.
-- **Appreciate good work.** Saw a great design? Tweeted about it. Made friends. Learned from them.
-- **Passion needs money.** Loved building. No money. Burned out. Now? Charge what I'm worth.
-- **Don't buy domains.** Bought ~65 domains. Never used them. Now? Buy only when needed. (bit personal haha)
-- **Reddit is a goldmine.** Found clients, friends, tools. Always learning. (Read the comments too)
-- **Bringing traffic to your site is easy.** Built a site. No visitors. Now? share on Reddit, Twitter, HackerNews. Boom. Traffic spike in hours. (This is a secret sauce)
-- **Give talks.** First one? Nervous as hell. Now? Regular speaker. Helps me learn better. 
-- **Give feedback.** First PR? Got roasted. Now? Give constructive feedback. Help others grow.
-- **Security first.** Got hacked once. Never again. Now it's built-in from day one.
-- **Optimize later.** Premature optimization killed my first big project. Now I make it work, then make it fast.
+En todos estos años me ha servido para viajar (a Potes, a Bilbao, a Asturias, a Cantabria, a Burgos, a Madrid y múltiples veces hasta Algeciras); me ha servido para conocer a mi actual pareja; para mudarme en unas 3 ocasiones al menos; para traer a mis gatas hasta casa. Me proporciona libertad.
 
-Each lesson? A story. A struggle. A breakthrough. They shape how I build today.
-
-Find your playground. Build. Learn. Grow. Innovate. Stay ahead.
+Claro que supone un coñazo mantenerlo y tenerlo cuidado (lo cuál no es que lo esté haciendo muy bien).
+Realmente nunca ha dado un problema excepto cuando se le acabó la batería y tuve que llamar a la grúa para que me lo accione y luego cambiarla.
+No es un pieza especial como de coleccionista, pero es un coche fiable, de poco consumo y divertido de conducir.
 
 import { EndCTA } from "@components/cta";
 
