--- a/src/content/thought/podcast-2025.mdx
+++ b/src/content/thought/podcast-2025.mdx
@@ -15,7 +15,7 @@ Un podcast sobre política internacional con el que disfruto mucho. Suelen ser l
 ### [Punzadas sonoras](https://punzadas.com/)
 Las autoras de este podcast son filósofas grandes fanes de Roland Barthes y de la literatura. No suelen tratar los grandes temas de la filosofía, si no que se adentran en el día a día de las personas y comentan en clave filosófica los entresijos de las cosas comunes que nos afectan a todos. La soledad, el amor, amistad, la perdida… todos son temas que se pueden tratar de una manera filosófica, sin ser pedante. 
 
-## [Pop y muerte](https://www.primaverasound.com/es/radio/shows/pop-y-muerte)
+### [Pop y muerte](https://www.primaverasound.com/es/radio/shows/pop-y-muerte)
 Este es el podcast más gamberro. Los autores de este podcast dan lo que prometen, una cucharada de pop (entiéndase con esto cualquier manifestación de la cultura popular) y otra de muerte (el crimen, lo escatológico). Suelen documentarse bastante, así que son podcast largos donde tampoco tienen reparos de reírse de todas las patochadas que nos rodean en la cultura del siglo XX y XXI. Especial cariño le tengo al [episodio sobre Jackass](https://www.primaverasound.com/es/radio/shows/pop-y-muerte/pop-y-muerte-t4-e07-pop-y-jackass-r-n).
 
 ### [Rancho Drácula](https://www.ivoox.com/en/podcast-rancho-dracula_sq_f11102400_1.html)
