fix: eliminado no necesario

--- a/src/content/ship/launching-my-personal-website.mdx
+++ b/src/content/ship/launching-my-personal-website.mdx
@@ -18,6 +18,8 @@ And remember, it's still a work in progress, just like me!
 
 See you in the next ship!
 
+![mi cara](public/jvmnt-dither.jpg)
+
 import { EndCTA } from "@components/cta";
 
 <EndCTA
