fix: "/now" agregado en el header

--- a/src/content/now/astro-now.mdx
+++ b/src/content/now/astro-now.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Mejorando mi sitio con Astro"
-description: "Hoy trabajé en mejorar la estructura de mi web."
+title: "/now ahora funciona"
+description: "Mejora de la web."
 pubDate: 2025-03-03
 ---
 
-Hice algunas mejoras en la navegación y ahora `/now` funciona correctamente. 🚀
+Implementé la estructura de esta sección "/now".
