--- a/src/content/now/otro-update.mdx
+++ b/src/content/now/otro-update.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mi primer Now"
-description: "Hoy hice algo genial en mi web."
-pubDate: 2025-03-03
+description: "Construyendo mi web."
+pubDate: 2025-03-02
 ---
 
-Este es mi primer post en `/now`. 🚀
+Construyendo mi web
