add: contenido en "/now"

--- a/src/content/thought/libros-2025.mdx
+++ b/src/content/thought/libros-2025.mdx
@@ -7,7 +7,7 @@ updatedDate: 'Feb 27 2025'
 ---
 
 # Libros del 2025
-En esta época donde leer se hace difícil gracias a la mágia de la tecnología, me he propuesto leer más.
+En esta época, donde leer se hace difícil gracias a la mágia de la tecnología, me he propuesto leer más.
 
 Para ello no estoy siguiendo un plan concreto, sólo el tener una lista de ibros que quiero leer y también ir alternando ensayo y novela. Tener una mesita de noche amplia donde quepan ayuda a esto ya que me permite escoger antes de ir a dormir cualquiera de los que tengo pendiente.
 
@@ -15,5 +15,5 @@ Para ello no estoy siguiendo un plan concreto, sólo el tener una lista de ibros
 Un libro de ciencia ficción de este autor que me gusta bastante, desde que leí su trilogía de Marte.
 La premisa es común: una nave generacional se dirige a un planeta de otro sistema solar para colonizarlo. El resto es lo sorprendente, la forma en que desarrolla la historia y sobre todo la conclusión que me dejó varios días pensando sobre todo con lo que está sucediendo en este momento en el mundo.
 
-## Gideon, la novena – Tamsym murió
-La única referencia que tenía de este libro era; _lesbianas nigromantes en el espacio._ Lo que no deja de ser verdad. Está muy bien escrito y es divertido, pero siento que no soy el público al que está dirigido esta historia.
+## Gideon, la novena – Tamsym Muir
+La única referencia que tenía de este libro era; _lesbianas nigromantes en el espacio._ Lo que no deja de ser verdad. Está muy bien escrito y es divertido, pero siento que no soy el público al que está dirigido esta historia. Ya que, admitamoslo, soy un señor de mediana edad.
