add: contenido "bits"

--- a/src/content/ship/fotos.mdx
+++ b/src/content/ship/fotos.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mi cara"
 description: 'Esto es una prueba'
-category: 'personal'
+category: 'fotos'
 ship_count: 3
 pubDate: 'Feb 25 2025'
 updatedDate: 'Feb 25 2025'
