--- a/src/content/ship/fotos.mdx
+++ b/src/content/ship/fotos.mdx
@@ -1,14 +1,13 @@
 ---
-title: "Mi cara"
-description: 'Esto es una prueba'
+title: "Cisne"
+description: 'Cine a punto de volar'
 category: 'fotos'
 ship_count: 3
-pubDate: 'Feb 25 2025'
-updatedDate: 'Feb 25 2025'
+pubDate: 'Aug 3 2024'
 ---
 
-![mi cara](/images/jvmnt-dither.jpg)
+![mi cara](/images/2024-08-03.jpg)
 
-La prueba de que existe las cosas feas en blanco y negro
+Cisne en la rivera del Pisuerga
 
 
